--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
-
+@import url('http://fonts.cdnfonts.com/css/gotham');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap');
 @import url('http://fonts.cdnfonts.com/css/gotham');
 --------------------------------------------------------------*/
 body {
@@ -550,45 +551,6 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 20px;
 }
 
-#features {
-  margin-top: 5vh;
-}
-
-.features h2 {
-
-  font-family: 'Gotham', sans-serif;
-  align-items: center;
-  text-align: center;
-}
-.features p {
-  align-items: center;
-  text-align: center;
-}
-
-.features .row {
-  width: 100%;
-  margin-top: 10vh;
-
-  margin-left: auto;
-  margin-right: auto;
-}
-.features .col-md-7 h3 {
-  font-size: 22px;
-  width: 100%;
-}
-
-.features .col-md-7 h4 {
-  width: 100%;
-  font-size: 18px;
-  margin-top: 5vh;
-  text-align: justify;
-  font-family: 'Gotham', sans-serif;
-  font-weight: 100;
-}
-.features  .btn {
-  margin-left: 47%;
-  margin-right: 47%;
-}
 
 .col-md-5 iframe {
 
@@ -618,38 +580,11 @@ h1, h2, h3, h4, h5, h6 {
 
 @media (max-width: 1400px) {
 
-  .features {
-    width: 100%;
-  }
-  .features .row {
-    display: inline-block;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-
-  }
   .col-md-5 {
     width: 100%;
     height: 30vh;
   }
   .col-md-5 iframe {
-    width: 100%;
-  }
-
-  .features .col-md-7 h3 {
-    width: 100%;
-    text-align: center;
-
-  }
-  .features .col-md-7{
-    width: 100%;
-    margin-bottom: 5vh;
-  }
-  .features .col-md-7 p {
-    width: 100%;
-    text-align: justify;
-  }
-  .features .col-md-7 h4 {
     width: 100%;
   }
 
@@ -674,11 +609,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 500px) {
   
-  
-  #features {
-    width: 90%;
-    padding: 0%;
-  }
+
 
   .col-md-5 iframe {
 
@@ -686,25 +617,6 @@ h1, h2, h3, h4, h5, h6 {
     height: 215px;
     margin-left: 12%;
     margin-right: 12%;
-  }
-
-  .features .col-md-7 h3 {
-    width: 100%;
-    text-align: center;
-    margin-left: 10%;
-    margin-right: 10%;
-    font-size: 20px;
-  }
-  .features .col-md-7 p {
-    width: 100%;
-    text-align: justify;
-    margin-left: 10%;
-    margin-right: 10%;
-  }
-  .features .col-md-7 h4 {
-    width: 100%;
-    margin-left: 10%;
-    margin-right: 10%;
   }
 
   #col-md-7 h3 {
@@ -725,6 +637,89 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.guide {
+  width: 100%;
+  height: auto;
+
+}
+.guide .title {
+  width: 100%;
+  height: 15vh;
+
+  text-align: center;
+}.guide .title h3 {
+  font-size: 20px;
+  margin-top: 3vh;
+}
+.guide .col-12 {
+  width: 80%;
+  margin-top: 10vh;
+  margin-left: auto;
+  margin-right: auto;
+
+
+  height: 30vh;
+  display: flex;
+}
+.guide .col-12 .col-6 {
+  height: 30vh;
+  border-radius: 5px;
+  
+}
+.guide .col-12 .col-6 h2 {
+  width: 90%;
+  text-align: left;
+  font-size: 25px;
+  margin-top: 5vh;
+  margin-left: 3vh;
+  font-family: 'Gotham', sans-serif;
+}
+.guide .col-12 .col-6 h3 {
+  width: 90%;
+  margin-top: 3vh;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: justify;
+  font-size: 17px;
+  font-family: 'Nunito', sans-serif;
+
+}
+
+@media (max-width:550px) {
+  .guide .col-12 {
+    margin-top: 20vh;
+    display: inline;
+  }
+  .guide .col-12 .col-6{
+    width: 90%;
+    height: 50%;
+    margin-top:10vh;
+  }
+  .guide .col-12 .col-6 iframe{
+    margin-left: 5%;
+  }
+  .guide .col-12 .col-6 h2 {
+    width: 95%;
+    font-size: 20px;
+    margin-left: 7%;
+
+  }
+  .guide .col-12 .col-6 h3 {
+    margin-left: 7%;
+    font-size: 16px;
+  }
+
+  #inverter {
+
+    margin-top: 50vh;
+  }
+  #inv {
+    margin-top: -60vh;
+    margin-bottom: 50vh;
+  }
+
+}
+
 
 #data-resource {
   margin-top: 0vh;
@@ -738,11 +733,8 @@ h1, h2, h3, h4, h5, h6 {
 	width: 100%; 
 	height: auto; 
 	z-index: -1000;
-	background: url(images/torre.jpg) no-repeat;
 	background-size: cover; 
 }
-
-
 
 .btn {
   margin-left: 35%;
@@ -757,40 +749,19 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   text-align: center;
 }
+
 #text-area .container .btn {
     margin-left: 0vh;
 }
-#text-area .box {
 
-  width: 100%;
-  height: 40vh;
-  margin: auto;
-  margin-top: 5vh;
-  display: flex;
+
+
+@media (max-width: 550px) {
+  #text-area {
+
+    margin-top: 35vh;
+  }
 }
-#text-area .box .item {
-
-  width: 100%;
-  height: 40vh;
-  padding: 5%;
-
-}
-
-#text-area .box .item .color-animation {
-
-  position: absolute;
-  width: 50%;
-  height: 30px;
-  margin-left: 10.5vh;
-  margin-top: 2vh;
-  z-index: -10000;
-  background-color: rgba(5, 35, 49, 0.849);
-  border-radius: 5px;
-  color: transparent;
-  animation: size-box .5s , color-box 1s both;
-
-}
-
 #carouselExampleIndicators {
 
   height: 70vh;
@@ -880,49 +851,11 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
   }
 }
-#text-area .box .item h2{
-  margin-top: 2vh;
-  font-size: 25px;
-  color: white;
-}
-#text-area .box .item h3{
-
-  font-size: 18px;
-  margin-top: 2vh;
-  text-align: justify;
-  font-family: 'Gotham', sans-serif;
-  font-weight: 100;
-}
-@media (max-width: 600px) {
-  #text-area .box {
-    width: 100%;
-    height: auto;
-    display: inline-block;
-  }
-  #text-area .box .item {
-
-    width: 100%;
-    height: auto;
-    padding: 5%;
-    margin-bottom: 5vh;
-
-  }
-  #text-area .box .item h3 {
-
-    width: 100%;
-  }
-  #text-area .box .item .color-animation {
-    width: 60%;  
-    margin-left: 6vh;
-  }
-
-
-}
 
 #poema {
   width: 100%;
   height: 100vh;
-  margin-top: 20vh;
+  margin-top: 30vh;
   background-color: rgba(0, 0, 0, 0.884);
 }
 #poema .container {
