--- a/templates/index.html
+++ b/templates/index.html
@@ -156,103 +156,13 @@
     </div>
   <!-- End Features Section -->
 
-      <section id="text-area">
-        <div class="container">
-
-          <div class="section-title">
-            <h2>Mapa da Violência</h2>
-            <p>Existem várias classificações para tipos de violência contra a mulher. É didático pensar nessas
-              classificações porque assim fica mais fácil desnaturalizar certas situações, fica mais fácil perceber o que
-              está acontecendo. De acordo com a Política Nacional de Enfrentamento à Violência Contra as Mulheres <a href="https://www12.senado.leg.br/institucional/omv/entenda-a-violencia/pdfs/politica-nacional-de- enfrentamento-a-violencia-contra-as-mulheres">[link]</a>
-              podemos nomear essas:</p>
-          </div>
-
-          <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingOne">
-                <button
-                  class="accordion-button"
-                  type="button"
-                  data-mdb-toggle="collapse"
-                  data-mdb-target="#collapseOne"
-                  aria-expanded="true"
-                  aria-controls="collapseOne"
-                >
-                  Accordion Item #1
-                </button>
-              </h2>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-mdb-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is hidden by default,
-                  until the collapse plugin adds the appropriate classes that we use to style each
-                  element. These classes control the overall appearance, as well as the showing and
-                  hiding via CSS transitions. You can modify any of this with custom CSS or
-                  overriding our default variables. It's also worth noting that just about any HTML
-                  can go within the <strong>.accordion-body</strong>, though the transition does
-                  limit overflow.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
-                <button
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-mdb-toggle="collapse"
-                  data-mdb-target="#collapseTwo"
-                  aria-expanded="false"
-                  aria-controls="collapseTwo"
-                >
-                  Accordion Item #2
-                </button>
-              </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-mdb-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by
-                  default, until the collapse plugin adds the appropriate classes that we use to
-                  style each element. These classes control the overall appearance, as well as the
-                  showing and hiding via CSS transitions. You can modify any of this with custom CSS
-                  or overriding our default variables. It's also worth noting that just about any
-                  HTML can go within the <strong>.accordion-body</strong>, though the transition
-                  does limit overflow.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
-                <button
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-mdb-toggle="collapse"
-                  data-mdb-target="#collapseThree"
-                  aria-expanded="false"
-                  aria-controls="collapseThree"
-                >
-                  Accordion Item #3
-                </button>
-              </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-mdb-parent="#accordionExample">
-                <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                  until the collapse plugin adds the appropriate classes that we use to style each
-                  element. These classes control the overall appearance, as well as the showing and
-                  hiding via CSS transitions. You can modify any of this with custom CSS or
-                  overriding our default variables. It's also worth noting that just about any HTML
-                  can go within the <strong>.accordion-body</strong>, though the transition does
-                  limit overflow.
-                </div>
-              </div>
-            </div>
-          </div>
-          <button class="btn"> <a href="#poster"><img src="{% static 'img/down.png' %}" alt="" width="60"></a></button>
 
 
 
-        </div>
-
-      </section>
+  
 
 
+  <!-- Poster Section -->
       <section id="poster">
         <div class="container">
           <h2>"a ideia de que somos</h2>  
@@ -319,7 +229,7 @@
                     </script>
                   </section>
 
-
+<!-- End Poster Section -->
 
   <!-- Video Final -->
   <section id="data-resource">
