--- a/templates/index.html
+++ b/templates/index.html
@@ -115,6 +115,9 @@
             
           </div>
       </div>
+      <div class="container">
+        
+      </div>
   <!-- End Carrousel -->
   
    <!-- Features Section -->
