--- a/static/css/style-new.css
+++ b/static/css/style-new.css
@@ -482,7 +482,7 @@ table {
 .carrousel {
 
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     margin-top: 10vh;
   
 }
@@ -935,7 +935,7 @@ table {
 
 #grid-template {
   width: 100%;
-  height: 80vh;
+  height: 70vh;
   margin-top: 0vh;
 
 
@@ -1024,10 +1024,45 @@ grid-template-areas:
 margin: 5px;  
 text-align: center;
 font-size: 1.5em;
-background-color: rgb(238, 22, 58);
+background-color: rgba(10, 10, 10, 0.788);
+cursor: pointer;
 }
-
-
+#grid-template .logo h2 {
+  color: red;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+#grid-template .nav h2 {
+  color: red;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+#grid-template .content h2 {
+  color: rgb(0, 4, 255);
+  margin-top: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+#grid-template .sidenav h2 {
+  color: rgb(195, 0, 255);
+  margin-top: 30%;
+  font-size: 35px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+#grid-template .advert h2,#grid-template .footer h2  {
+  color: rgb(157, 255, 0);
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
 #grid-template .grid {
 max-width: 80%;
 height: 50vh;
@@ -1035,6 +1070,18 @@ margin: 0 auto;
 margin-top: 10vh;
 }
 
+#btn-down {
+  width: 100%;
+  height: 5vh;
+  margin-top: 10vh;
+}
+#btn-down .container{
+  width: 5%;
+  height: 100%;
+}
+#btn-down .container img{
+  width: 50px;
+}
 
 
 
@@ -1111,3 +1158,50 @@ margin-top: 10vh;
   background-color: transparent;
  }
  
+
+ #about {
+   width: 100%;
+   height: 100vh;
+   position: absolute;
+   margin-top: 10vh;
+
+ }
+ #about .container {
+  width: 80%;
+  height: auto;
+  margin-top: 10vh;
+
+  text-align: center;
+  margin-left: 15%;
+}
+#about .container h2 {
+  color: rgb(2, 2, 2);
+  margin-top: 15vh;
+  font-size: 35px;
+}
+#about .container h3 {
+  color: rgb(0, 0, 0);
+  margin-top: 5%;
+  font-size: 22px;
+  line-height: 50px;
+  text-align: justify;
+}
+#about .container .sublime {
+  width: 120px;
+  height: 5px;
+  margin-left: 27%;
+  position: absolute;
+  background-color: rgb(23, 212, 187);
+}
+
+#about .container .forms {
+  margin-top: 10vh;
+  position: absolute;
+}
+#footer {
+  width: 100%;
+  height: 5vh;
+  background-color: rgb(54, 52, 52);
+  position: absolute;
+  margin-top: 100%;
+}
