--- a/templates/about.html
+++ b/templates/about.html
@@ -1,22 +1,123 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-    <title>About</title>
-  </head>
-  <body>
+{% extends 'base.html' %}    
+{% load static %}
 
 
+{% block content %}
+
+
+<!-- Header -->
+<header id="header" class="d-flex align-items-center">
+  <div class="container d-flex align-items-center justify-content-between">
+
+    <div class="logo">
+      <a href="index.html"><img src="#" alt="" class="img-fluid"></a>
+    </div>
+
+    <nav id="navbar" class="navbar">
+      <ul>
+        <li><a class="nav-link scrollto active" href="/home">Home</a></li>
+        <li><a class="nav-link scrollto" href="/home/#carrousel">Introduçao</a></li>
+        <li><a class="nav-link scrollto" href="#guia">Guia</a></li>
+        <li><a class="nav-link scrollto" href="#text-area">Mapa da Violência</a></li>
+        <li><a class="nav-link scrollto" href="#grid-template">+ Conteúdos</a></li>
+        <li><a class="nav-link scrollto" href="#poema">Manifesto</a></li>
+        <li><a class="nav-link scrollto" href="#poema">Sobre</a></li>
+      </ul>
+      <img class="bi bi-list mobile-nav-toggle" src="{% static 'img/menu.png' %}"></i>
+    </nav>
+
+  </div>
+</header>
+<!-- End Header -->
+
+
+<div id="about">
+  <div class="container">
+    <h2>Sobre a Pesquisa</h2>
+    <div class="sublime">
+
+    </div>
+    <h3>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
+      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
+      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
+      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
+      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+    </h3>
+  
+  </div>
+
+  <div class="container">
+    <h2>Metodologia</h2>
+    <div class="sublime">
+
+    </div>
+    <h3>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
+      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
+      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
+      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
+      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+    </h3>
     
-    
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </div>
 
-  </body>
-</html>
+  <div class="container">
+    <h2>Sobre a Pesquisadora</h2>
+    <div class="sublime">
+
+    </div>
+    <h3>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
+      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
+      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
+      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
+      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+    </h3>
+    <br>
+    <h3>Entre em contato</h3>
+
+    <div class="forms">
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputEmail4">Email</label>
+            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+          </div>
+          <div class="form-group col-md-2">
+            <label for="tel">Telefone</label>
+            <input type="tel" class="form-control" id="tel">
+          </div>
+         
+        </div>
+       
+      
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label for="Mensagem">Mensagem</label>
+            <input type="text" class="form-control" id="Mensagem">
+          </div>
+          
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-danger">Enviar</button>
+        </div>
+      
+      </form>
+    </div>
+    
+  </div>
+</div>
+
+
+<div id="footer">
+
+</div>
+
+
+
+
+{% endblock %}
