--- a/templates/template.html
+++ b/templates/template.html
@@ -8,17 +8,15 @@
  <!-- Hero Section -->
  <section id="hero">
   <div class="hero-container">
+    {% for linha in hero %}
       <a href="index.html" class="hero-logo" data-aos="zoom-in"></a>
-      <h1 data-aos="zoom-in">Repositório Online</h1>
-      <h2 data-aos="fade-up">Guia Virtual Sobre Atendimento a Mulheres Vítimas de Violência</h2>
+      <h1 data-aos="zoom-in">{{linha.titulo}}</h1>
+      <h2 data-aos="fade-up">{{linha.subtitulo}}</h2>
       <a data-aos="fade-up" data-aos-delay="200" href="#theme-carrousel" class="btn-get-started scrollto">Introdução</a>
-      <h3 data-aos="fade-up">VOCÊ, profissional das políticas públicas, que lida com o PÚBLICO em algum momento teve ou terá contato com situações 
-        de VIOLÊNCIA CONTRA A MULHER no exercício da sua profissão...
-        Seja você psicólogo, assistente social, educador, escrivão, entrevistador social, médico, agente
-        comunitário de saúde, serviços gerais... Esteja você no CRAS, CREAS, PSF, DDM, escola, CAPS, Judiciário, ou qualquer outro serviço público.
-        Por isso, este guia é para você; você e seus colegas de trabalho.</h3>
+      <h3 data-aos="fade-up">{{linha.texto_auxiliar}}</h3>
         
-        <h4 data-aos="fade-up" >É de NOSSA responsabilidade acolher essa demanda!</h4>
+        <h4 data-aos="fade-up" >{{linha.ultimo_texto}}</h4>
+        {% endfor %}
   </div>
 </section>
 
@@ -39,7 +37,7 @@
         <li><a class="nav-link scrollto" href="#text-area">Mapa da Violência</a></li>
         <li><a class="nav-link scrollto" href="#grid-template">+ Conteúdos</a></li>
         <li><a class="nav-link scrollto" href="#poema">Manifesto</a></li>
-        <li><a class="nav-link scrollto" href="#poema">Sobre</a></li>
+        <li><a class="nav-link scrollto" href="/about">Sobre</a></li>
       </ul>
       <img class="bi bi-list mobile-nav-toggle" src="{% static 'img/menu.png' %}"></i>
     </nav>
@@ -90,11 +88,14 @@
     </div>
 
 </div>
-
 <!-- End Carrousel -->
 
-<!-- End Poster Section -->
-
+<section id="btn-down">
+  <div class="container">
+    <a href="#guia">
+    <img src="{% static 'img/down.png' %}" alt=""></a>
+  </div>
+</section>
 
 <!-- Features Section -->
 <div class="guide" id="guia">
@@ -105,7 +106,7 @@
   {% for guia_videos in guia_videos %}
   <div class="col-12" data-aos="fade-left" data-aos-delay="100">
     <div class="col-sm">
-      <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Ew-VruAckjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="100%" height="100%" src="{{guia_videos.link}}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="col-sm">
       <h2>{{guia_videos.primeiro_texto}}</h2>
@@ -116,7 +117,12 @@
   {% endfor %}
 </div>
 <!-- End Features Section -->
-
+<section id="btn-down">
+  <div class="container">
+    <a href="#servicos">
+    <img src="{% static 'img/down.png' %}" alt=""></a>
+  </div>
+</section>
 
 <!-- End Features Section -->
   <div id="servicos" class="block">
@@ -141,7 +147,8 @@
         <div class="col-6 element-item sexual">
     
           <div class="box">
-              <h2>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum, iste perferendis. Iure fugit odio, quia, rerum aperiam cumque dolor ea voluptatem alias dolorem asperiores in quis nemo sunt eligendi distinctio.</h2>     
+              <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora eveniet iure aspernatur animi laborum consequatur repellendus enim rem, numquam facilis unde distinctio nobis, laudantium libero commodi deleniti quaerat nulla! Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora eveniet iure aspernatur animi laborum consequatur repellendus enim rem, numquam facilis unde
+              </h2>     
           </div>
 
       </div>
@@ -160,6 +167,13 @@
     </div>
   </div>
   <!-- End Features Section -->
+
+  <section id="btn-down">
+    <div class="container">
+      <a href="#poster">
+      <img src="{% static 'img/down.png' %}" alt=""></a>
+    </div>
+  </section>
   <section id="poster">
 
  <div class="grid-collum">
@@ -172,7 +186,7 @@
     <h2>Algum texto aparecendo</h2>
 </div>
 <div class="item">
-    <img src="{% static 'img/magoz-our.webp' %}" alt="">
+    <img src="{% static 'img/magoz.jpg' %}" alt="">
     <h2>Algum texto aparecendo</h2>
 </div>
  </div>
@@ -191,18 +205,43 @@
       <div>
 
         <section class="grid grid-template-areas-2">
-          <div class="item logo"> </div>
-          <div class="item nav"></div>
-          <div class="item content"></div>
-          <div class="item sidenav"></div>
-          <div class="item advert"></div>
-          <div class="item footer"></div>
+          <div class="item logo">
+            <h2>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora
+            </h2>
+          </div>
+          <div class="item nav">
+            <h2>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora
+            </h2>
+          </div>
+          <div class="item content">
+            <h2>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora
+            </h2>
+          </div>
+          <div class="item sidenav">
+            <h2>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora
+            </h2>
+          </div>
+          <div class="item advert"><h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora
+          </h2></div>
+          <div class="item footer"><h2>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque tempora
+          </h2></div>
         </section>
         </div>
 
   </section>
   <!-- End Poster Section -->
-
+  <section id="btn-down">
+    <div class="container">
+      <a href="#poema">
+      <img src="{% static 'img/down.png' %}" alt=""></a>
+    </div>
+  </section>
   <section id="poema">
     <div class="container">
       <h2>“A roupa era curta</h2>
