feat: pagina textos academicos

--- a/templates/template.html
+++ b/templates/template.html
@@ -178,7 +178,8 @@
 
  <div class="grid-collum">
   <div class="item">
-    <img src="{% static 'img/magoz-education.webp' %}" alt="">
+    <a href="{% url 'pages:page_text' %}">
+    <img src="{% static 'img/magoz-education.webp' %}" alt=""></a>
     <h2>Algum texto aparecendo</h2>
 </div>
 <div class="item">
