--- a/static/css/style-new.css
+++ b/static/css/style-new.css
@@ -1205,3 +1205,59 @@ margin-top: 10vh;
   position: absolute;
   margin-top: 100%;
 }
+
+
+#page_text {
+
+  width: 100%;
+  height: 170vh;
+  margin-top: 0vh;
+
+}
+#page_text .container {
+  width: 80%;
+  height: auto;
+  margin-top: 20vh;
+}
+#page_text .container .page_title {
+  display: inline-block;
+  width: 100%;
+
+
+}
+#page_text .container .page_title .col-lm {
+
+  width: 75%;
+  margin-left: 13vh;
+  margin-right: auto;
+  margin-top: 1vh;
+  border-bottom: 2.5px solid orangered;
+}
+#page_text .container .page_title .col-4, #page_text .container .page_title .col-2 {
+
+  width: 80%;
+  margin-left: 12vh;
+  margin-right: auto;
+  text-align: left;
+  margin-top: 1vh;
+}
+#page_text .container .page_title h2 {
+  font-size: 25px;
+  padding-bottom: 1vh;
+
+}
+#page_text .container .page_title h3 {
+  font-size: 18px;
+}
+#page_text .container .text {
+  margin-top: 10vh;
+}
+#page_text .container .text h3 {
+  font-size: 20px;
+  line-height: 40px;
+  margin-top: 4vh;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: justify;
+}
