--- a/static/css/style-new.css
+++ b/static/css/style-new.css
@@ -821,7 +821,7 @@ table {
 }
 
 #servicos .button-group button + button {
-  margin-left: 20px;
+  margin-left: 7vh;
   padding-top: 1vh;
 
   border-radius: 10px;
@@ -1098,14 +1098,14 @@ margin-top: 10vh;
   height: auto;
   position: absolute;
   margin-top: 10%;
-  margin-left: 35%;
+  margin-left:40%;
   width: 30%;
 }
 #poema h2 {
   font-size: 24px;
   margin-top: 2vh;
   color: white;
-  text-align: center;
+  text-align: left;
 }
 
 @media (max-width: 550px) {
@@ -1161,7 +1161,7 @@ margin-top: 10vh;
 
  #about {
    width: 100%;
-   height: 100vh;
+   height: 180vh;
    position: absolute;
    margin-top: 10vh;
 
@@ -1195,7 +1195,8 @@ margin-top: 10vh;
 }
 
 #about .container .forms {
-  margin-top: 10vh;
+  width: 60%;
+  margin-left: 5%;
   position: absolute;
 }
 #footer {
@@ -1210,7 +1211,8 @@ margin-top: 10vh;
 #page_text {
 
   width: 100%;
-  height: 170vh;
+
+  position: absolute;
   margin-top: 0vh;
 
 }
@@ -1218,6 +1220,7 @@ margin-top: 10vh;
   width: 80%;
   height: auto;
   margin-top: 20vh;
+  margin-bottom: 10vh;
 }
 #page_text .container .page_title {
   display: inline-block;
@@ -1260,4 +1263,15 @@ margin-top: 10vh;
   margin-left: auto;
   margin-right: auto;
   text-align: justify;
+}
+
+#page_text .container .btn-danger {
+  margin-left: 14vh;
+  margin-top: 5vh;
+
+}
+#page_text .container .btn-danger a {
+  color: black;
+  text-decoration: none;
+
 }
