--- a/templates/template.html
+++ b/templates/template.html
@@ -34,7 +34,7 @@
         <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
         <li><a class="nav-link scrollto" href="#carrousel">Introduçao</a></li>
         <li><a class="nav-link scrollto" href="#guia">Guia</a></li>
-        <li><a class="nav-link scrollto" href="#text-area">Mapa da Violência</a></li>
+        <li><a class="nav-link scrollto" href="#servicos">Mapa da Violência</a></li>
         <li><a class="nav-link scrollto" href="#grid-template">+ Conteúdos</a></li>
         <li><a class="nav-link scrollto" href="#poema">Manifesto</a></li>
         <li><a class="nav-link scrollto" href="/about">Sobre</a></li>
@@ -183,11 +183,13 @@
     <h2>Algum texto aparecendo</h2>
 </div>
 <div class="item">
-    <img src="{% static 'img/magoz-our.webp' %}" alt="">
+  <a href="{% url 'pages:page_text_two' %}">
+    <img src="{% static 'img/magoz-our.webp' %}" alt=""></a>
     <h2>Algum texto aparecendo</h2>
 </div>
 <div class="item">
-    <img src="{% static 'img/magoz.jpg' %}" alt="">
+  <a href="{% url 'pages:page_text_three' %}">
+    <img src="{% static 'img/magoz.jpg' %}" alt=""></a>
     <h2>Algum texto aparecendo</h2>
 </div>
  </div>
