--- a/static/css/style-new.css
+++ b/static/css/style-new.css
@@ -31,6 +31,9 @@ body {
 	line-height: 1;
   font-family: 'Raleway', sans-serif;
   font-family: 'Gotham', sans-serif;
+  background-image: url('./teste.jpg');
+  
+
 }
 ol, ul {
 	list-style: none;
@@ -653,6 +656,7 @@ table {
   width: 100%;
   height: auto;
 
+
 }
 .guide .title {
   width: 100%;
@@ -865,7 +869,7 @@ table {
 
 #poster {
   width: 100%;
-  height: 50vh;
+  height: 60vh;
   margin-top: 10vh;
   display: grid;
 
@@ -896,7 +900,7 @@ table {
 #poster .item:hover {
 	margin: 5px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 25px;
   color: transparent;
   margin-left: -0vh;
 }
@@ -904,16 +908,16 @@ table {
   position: absolute;
   margin-top: -30vh;
   transition: 1.5s ease-in-out;
-  margin-left: 10%;
+  margin-left: 5%;
   opacity: 1;
-  font-size: 20px;
+  font-size: 28px;
   color: white;
   font-weight: bold;
 }
 
 #poster .item img {
 	width: 100%;
-  height: 80%;
+  height: 100%;
   margin-top: 0vh;
 }
 
@@ -935,13 +939,16 @@ table {
 
 #grid-template {
   width: 100%;
-  height: 70vh;
+  height: 80vh;
   margin-top: 0vh;
+
 
 
 }
 #grid-template .title h2 {
   font-size: 35px;
+
+  margin-top: 10vh;
 }
 #grid-template .title h3 {
   font-size: 20px;
@@ -1028,28 +1035,28 @@ background-color: rgba(10, 10, 10, 0.788);
 cursor: pointer;
 }
 #grid-template .logo h2 {
-  color: red;
+  color: rgb(255, 255, 255);
   margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
   width: 70%;
 }
 #grid-template .nav h2 {
-  color: red;
+  color: rgb(255, 255, 255);
   margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
   width: 70%;
 }
 #grid-template .content h2 {
-  color: rgb(0, 4, 255);
+  color: rgb(255, 255, 255);
   margin-top: 20%;
   margin-left: auto;
   margin-right: auto;
   width: 70%;
 }
 #grid-template .sidenav h2 {
-  color: rgb(195, 0, 255);
+  color: rgb(255, 255, 255);
   margin-top: 30%;
   font-size: 35px;
   margin-left: auto;
@@ -1057,7 +1064,7 @@ cursor: pointer;
   width: 90%;
 }
 #grid-template .advert h2,#grid-template .footer h2  {
-  color: rgb(157, 255, 0);
+  color: rgb(255, 255, 255);
   margin-top: 10%;
   margin-left: auto;
   margin-right: auto;
@@ -1089,7 +1096,7 @@ margin-top: 10vh;
 #poema {
   width: 100%;
   height: 100vh;
-  margin-top: 30vh;
+  margin-top: 10vh;
   margin-left: 0vh;
   background-color: rgba(0, 0, 0, 0.884);
   color: white;
@@ -1164,15 +1171,16 @@ margin-top: 10vh;
    height: 180vh;
    position: absolute;
    margin-top: 10vh;
+   
 
  }
  #about .container {
   width: 80%;
-  height: auto;
-  margin-top: 10vh;
+  height: 35vh;
+  margin-top: 5vh;
 
   text-align: center;
-  margin-left: 15%;
+  margin-left: 10%;
 }
 #about .container h2 {
   color: rgb(2, 2, 2);
@@ -1189,7 +1197,7 @@ margin-top: 10vh;
 #about .container .sublime {
   width: 120px;
   height: 5px;
-  margin-left: 27%;
+  margin-left: 30%;
   position: absolute;
   background-color: rgb(23, 212, 187);
 }
@@ -1214,6 +1222,9 @@ margin-top: 10vh;
 
   position: absolute;
   margin-top: 0vh;
+  background-image: url('./background-image.png');
+  background-position: center;
+  background-position: fixed;
 
 }
 #page_text .container {
@@ -1247,10 +1258,12 @@ margin-top: 10vh;
 #page_text .container .page_title h2 {
   font-size: 25px;
   padding-bottom: 1vh;
+  color: white;
 
 }
 #page_text .container .page_title h3 {
   font-size: 18px;
+  color: white;
 }
 #page_text .container .text {
   margin-top: 10vh;
@@ -1263,15 +1276,17 @@ margin-top: 10vh;
   margin-left: auto;
   margin-right: auto;
   text-align: justify;
+  color: white;
 }
 
 #page_text .container .btn-danger {
   margin-left: 14vh;
   margin-top: 5vh;
+  background-color: transparent;
 
 }
 #page_text .container .btn-danger a {
-  color: black;
+  color: rgb(255, 255, 255);
   text-decoration: none;
 
 }
