--- a/static/css/style-new.css
+++ b/static/css/style-new.css
@@ -592,7 +592,7 @@ table {
 
 @media (max-width: 550px) {
   .carrousel {
-    height: auto;
+    min-height: 140vh;
   }
   .carrousel .owl-carousel .item{
     width: 100%;
@@ -808,8 +808,7 @@ table {
   margin-bottom: 30px;
   height: 10vh;
   width: 100%;
-
-  margin-left: auto;
+  margin-left: 20px;
   margin-right: auto;
 }
 
@@ -820,14 +819,14 @@ table {
   margin: 0;
   text-transform: uppercase;
   font-weight: 700;
+  margin-left: 70px;
   outline: none;
   align-items: center;
 }
 
 #servicos .button-group button + button {
-  margin-left: 7vh;
+  margin-left: 50px;
   padding-top: 1vh;
-
   border-radius: 10px;
   padding: 1vh;
 }
@@ -837,6 +836,7 @@ table {
   background-color: rgba(255, 0, 0, 0.726);
   border-radius: 10px;
   padding: 1vh;
+  margin-left: 50px;
 
 }
 #servicos .row {
@@ -863,6 +863,54 @@ table {
     text-align: justify;
     line-height: 30px;
     
+  }
+  #servicos .button-group {
+    margin-bottom: 30px;
+    height: auto;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #servicos .button-group button {
+    margin-left: 20px;
+    width: 40%;
+    padding-top: 1vh;
+
+    border-radius: 10px;
+    padding: 1vh;
+  }
+  #servicos .button-group button + button {
+    margin-left: 20px;
+    width: 40%;
+    padding-top: 1vh;
+
+    border-radius: 10px;
+    padding: 1vh;
+  }
+  #servicos .button-group button.active {
+    color: black;
+    background-color: rgba(255, 0, 0, 0.726);
+    border-radius: 10px;
+    padding-top: 1vh;
+    padding: 1vh;
+    margin-left: 20px;
+    width: 40%;
+  }
+  
+}
+@media (max-width: 300px) {
+  
+
+  #servicos .button-group button {
+    margin-left: 10px;
+  }
+  #servicos .button-group button + button {
+    margin-left: 10px;
+    width: 40%;
+
+  }
+  #servicos .button-group button.active {
+    margin-left: 20px;
   }
   
 }
@@ -931,8 +979,21 @@ table {
 
 @media (max-width:550px) {
   #poster {
-    height: 10vh;
-    visibility: hidden;
+    height: 200vh;
+    margin-top: 50vh;
+  }
+  #poster .item {
+    width: 100%;
+    margin: 0;
+  }
+  #poster .item img {
+    width: 100%;
+  }
+  #poster .grid-collum {
+
+    width: 100%;
+    height: 100%;
+    display: inline-block;
   }
 }
 
@@ -1088,6 +1149,26 @@ margin-top: 10vh;
 }
 #btn-down .container img{
   width: 50px;
+}
+
+@media (max-width:550px) {
+  #grid-template .logo h2 {
+    font-size: 15px;
+  }
+  #grid-template .nav h2 {
+    font-size: 12px;
+  }
+  #grid-template .content h2 {
+    font-size: 15px;
+  }
+  #grid-template .sidenav h2 {
+    font-size: 15px;
+    margin-top: 10vh;
+    color: red;
+  }
+  #grid-template .advert h2,#grid-template .footer h2  {
+    font-size: 12px;
+  }
 }
 
 
