--- a/templates/about.html
+++ b/templates/about.html
@@ -38,12 +38,7 @@
 
     </div>
     <h3>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
-      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
-      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
-      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
-      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+    {{sobre_pesquisa.texto}}
     </h3>
   
   </div>
@@ -54,12 +49,7 @@
 
     </div>
     <h3>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
-      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
-      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
-      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
-      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+      {{sobre_metodologia.texto}}
     </h3>
     
   </div>
@@ -70,12 +60,7 @@
 
     </div>
     <h3>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
-      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
-      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum esse aspernatur 
-      repudiandae pariatur temporibus dolorum facere officiis fuga labore. 
-      Sed quis accusantium alias rem a sunt culpa fuga explicabo impedit?
+      {{sobre_pesquisadora.texto}}
     </h3>
     <br>
     <h3>Entre em contato</h3>
