--- a/templates/template.html
+++ b/templates/template.html
@@ -30,7 +30,7 @@
   <div class="container d-flex align-items-center justify-content-between">
 
     <div class="logo">
-      <a href="index.html"><img src="#" alt="" class="img-fluid"></a>
+      <a href="index.html"><img src="#" alt="imagemInicial" class="img-fluid"></a>
     </div>
 
     <nav id="navbar" class="navbar">
@@ -97,7 +97,7 @@
 <section id="btn-down">
   <div class="container">
     <a href="#guia">
-    <img src="{% static 'img/down.png' %}" alt=""></a>
+    <img src="{% static 'img/down.png' %}" alt="botaoParaBaixo"></a>
   </div>
 </section>
 
@@ -124,7 +124,7 @@
 <section id="btn-down">
   <div class="container">
     <a href="#servicos">
-    <img src="{% static 'img/down.png' %}" alt=""></a>
+    <img src="{% static 'img/down.png' %}" alt="botaoParaBaixo"></a>
   </div>
 </section>
 <!-- End Features Section -->
@@ -174,7 +174,7 @@
   <section id="btn-down">
     <div class="container">
       <a href="#poster">
-      <img src="{% static 'img/down.png' %}" alt=""></a>
+      <img src="{% static 'img/down.png' %}" alt="imagem_slide"></a>
     </div>
   </section>
   <section id="poster">
@@ -182,17 +182,17 @@
  <div class="grid-collum">
   <div class="item">
     <a href="{% url 'pages:page_text' %}">
-    <img src="{% static 'img/magoz-education.webp' %}" alt=""></a>
+    <img src="{% static 'img/magoz-education.webp' %}" alt="imagem_slide"></a>
     <h2>Algum texto aparecendo</h2>
 </div>
 <div class="item">
   <a href="{% url 'pages:page_text_two' %}">
-    <img src="{% static 'img/magoz-our.webp' %}" alt=""></a>
+    <img src="{% static 'img/magoz-our.webp' %}" alt="imagem_slide"></a>
     <h2>Algum texto aparecendo</h2>
 </div>
 <div class="item">
   <a href="{% url 'pages:page_text_three' %}">
-    <img src="{% static 'img/magoz.jpg' %}" alt=""></a>
+    <img src="{% static 'img/magoz.jpg' %}" alt="imagem_slide"></a>
     <h2>Algum texto aparecendo</h2>
 </div>
  </div>
@@ -224,7 +224,7 @@
   <section id="btn-down">
     <div class="container">
       <a href="#poema">
-      <img src="{% static 'img/down.png' %}" alt=""></a>
+      <img src="{% static 'img/down.png' %}" alt="botaoParaBaixo"></a>
     </div>
   </section>
   <section id="poema">
