--- a/templates/about.html
+++ b/templates/about.html
@@ -10,18 +10,18 @@
   <div class="container d-flex align-items-center justify-content-between">
 
     <div class="logo">
-      <a href="index.html"><img src="#" alt="" class="img-fluid"></a>
+      <a href="index.html"><img src="#" alt="imagemInicial" class="img-fluid"></a>
     </div>
 
     <nav id="navbar" class="navbar">
       <ul>
         <li><a class="nav-link scrollto active" href="/home">Home</a></li>
-        <li><a class="nav-link scrollto" href="/home/#carrousel">Introduçao</a></li>
-        <li><a class="nav-link scrollto" href="#guia">Guia</a></li>
-        <li><a class="nav-link scrollto" href="#text-area">Mapa da Violência</a></li>
-        <li><a class="nav-link scrollto" href="#grid-template">+ Conteúdos</a></li>
-        <li><a class="nav-link scrollto" href="#poema">Manifesto</a></li>
-        <li><a class="nav-link scrollto" href="#poema">Sobre</a></li>
+        <li><a class="nav-link scrollto" href="/#carrousel">Introduçao</a></li>
+        <li><a class="nav-link scrollto" href="/#guia">Guia</a></li>
+        <li><a class="nav-link scrollto" href="/#servicos">Mapa da Violência</a></li>
+        <li><a class="nav-link scrollto" href="/#grid-template">+ Conteúdos</a></li>
+        <li><a class="nav-link scrollto" href="/#poema">Manifesto</a></li>
+        <li><a class="nav-link scrollto" href="/#poema">Sobre</a></li>
       </ul>
       <img class="bi bi-list mobile-nav-toggle" src="{% static 'img/menu.png' %}"></i>
     </nav>
