--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="{% static 'bootstrap-template/owl.carousel.min.css' %}">
-    <link rel="stylesheet" href="{% static 'bootstrap-template/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap/owl.theme.default.min.css' %}">
 
   
         <!-- Vendor CSS Files -->
@@ -51,7 +51,7 @@
     <script src="{% static 'js/filter.js' %}"></script>
 
 
-    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'bootstrap/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/carrousel.js' %}"></script>
 
   
